[gd_scene load_steps=4 format=3 uid="uid://bp2oj75gudlbp"]

[ext_resource type="Script" path="res://Scripts/path.gd" id="1_jmulb"]
[ext_resource type="PackedScene" uid="uid://b8ck1ghewu3ei" path="res://Scenes/Mark.tscn" id="2_gtks7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyyxy"]
size = Vector2(1283, 88)

[node name="Path" type="Line2D"]
points = PackedVector2Array(0, 0, 1280, 0)
width = 6.0
script = ExtResource("1_jmulb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(640.5, -2)
shape = SubResource("RectangleShape2D_wyyxy")

[node name="Mark1" parent="." instance=ExtResource("2_gtks7")]
position = Vector2(49, -40)

[node name="Mark2" parent="." instance=ExtResource("2_gtks7")]
position = Vector2(1228, -40)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
